update css and adding some images

--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,7 @@
   }
 }
 
+/* Flip card styles */
 .flip-card {
   width: 400px;
   height: 300px;
@@ -79,4 +80,69 @@
 
 .flip-card-back li {
   margin-bottom: 6px;
+}
+
+/* 3D */
+.slider-container {
+  position: relative;
+  width: 500px;
+  height: 350px;
+  margin: 0 auto;
+  perspective: 1200px;
+}
+
+.carousel {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  transform-style: preserve-3d;
+  transition: transform 1s ease;
+}
+
+.carousel-item {
+  position: absolute;
+  width: 300px;
+  height: 260px;
+  left: 100px;
+  top: 40px;
+  background: #111;
+  border-radius: 16px;
+  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.4);
+  text-align: center;
+  padding: 10px;
+  color: white;
+  transform-style: preserve-3d;
+}
+
+.carousel-item img {
+  width: 100%;
+  height: 180px;
+  object-fit: cover;
+  border-radius: 12px;
+  margin-bottom: 10px;
+}
+
+/* Navigation buttons */
+.nav-button {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background: rgba(20, 20, 20, 0.7);
+  color: white;
+  border: none;
+  font-size: 38px;
+  padding: 8px 16px;
+  cursor: pointer;
+  border-radius: 10px;
+}
+
+.left {
+  left: -50px;
+}
+.right {
+  right: -50px;
+}
+
+.nav-button:hover {
+  background: rgba(255, 255, 255, 0.2);
 }
