--- a/src/App.css
+++ b/src/App.css
@@ -116,9 +116,9 @@
 
 .carousel-item img {
   width: 100%;
-  height: 180px;
+  height: 280px;
   object-fit: cover;
-  border-radius: 12px;
+  /* border-radius: 12px; */
   margin-bottom: 10px;
 }
 
